--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,3 +1,5 @@
+{% extends 'polls/layout.html' %}
+{% block content %}
 {% if latest_question_list %}
   <ul>
     {% for question in latest_question_list %}
@@ -8,3 +10,4 @@
 {% else %}
   <p>No polls are available.</p>
 {% endif %}
+{% endblock %}
